force-app/main/default/objects/DrawingVersion__c/DrawingVersion__c.object-meta.xml
<CustomObject>
    <label>Drawing Version</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drawings Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>