force-app/main/default/objects/DrawingVersion__c/fields/AxleBox__c.field-meta.xml
<CustomField>
    <fullName>AxleBox__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Axle Box</label>
    <referenceTo>WheelsetComponent__c</referenceTo>
    <relationshipName>Drawings_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>