force-app/main/default/objects/DrawingVersion__c/fields/AxLoad_t__c.field-meta.xml
<CustomField>
    <fullName>AxLoad_t__c</fullName>
    <label>Ax. Load (t)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>