force-app/main/default/objects/DrawingVersion__c/fields/AxLoadType__c.field-meta.xml
<CustomField>
    <fullName>AxLoadType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type</label>
    <referenceTo>WheelAxlialLoadType__c</referenceTo>
    <relationshipName>Drawings_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>