force-app/main/default/objects/DrawingVersion__c/fields/BaseID__c.field-meta.xml
<CustomField>
    <fullName>BaseID__c</fullName>
    <formula>DrawingBase__r.ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>