force-app/main/default/objects/DrawingVersion__c/fields/DiamB__c.field-meta.xml
<CustomField>
    <fullName>DiamB__c</fullName>
    <label>Diam B</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>