force-app/main/default/objects/DrawingVersion__c/fields/Diameter__c.field-meta.xml
<CustomField>
    <fullName>Diameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diameter</label>
    <referenceTo>WheelDiameter__c</referenceTo>
    <relationshipName>Drawings_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>