force-app/main/default/objects/DrawingVersion__c/fields/DiamJ__c.field-meta.xml
<CustomField>
    <fullName>DiamJ__c</fullName>
    <label>Diam J</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>