force-app/main/default/objects/DrawingVersion__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Wheels Distance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>