force-app/main/default/objects/DrawingVersion__c/fields/DrawingAxle__c.field-meta.xml
<CustomField>
    <fullName>DrawingAxle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing Axle</label>
    <referenceTo>DrawingVersion__c</referenceTo>
    <relationshipName>Drawings_Versions1</relationshipName>
    <type>Lookup</type>
</CustomField>