force-app/main/default/objects/DrawingVersion__c/fields/DrawingBase__c.field-meta.xml
<CustomField>
    <fullName>DrawingBase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DrawingBase</label>
    <referenceTo>DrawingBase__c</referenceTo>
    <relationshipName>Drawings_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>