force-app/main/default/objects/DrawingVersion__c/fields/DrawingWheel__c.field-meta.xml
<CustomField>
    <fullName>DrawingWheel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing Wheel</label>
    <referenceTo>DrawingVersion__c</referenceTo>
    <relationshipName>Drawings_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>