force-app/main/default/objects/DrawingVersion__c/fields/Facet__c.field-meta.xml
<CustomField>
    <fullName>Facet__c</fullName>
    <label>Facet</label>
    <length>80</length>
    <type>Text</type>
</CustomField>