force-app/main/default/objects/DrawingVersion__c/fields/Groove__c.field-meta.xml
<CustomField>
    <fullName>Groove__c</fullName>
    <label>Groove</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>