force-app/main/default/objects/DrawingVersion__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hub</label>
    <referenceTo>WheelHub__c</referenceTo>
    <relationshipName>Drawings_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>