force-app/main/default/objects/DrawingVersion__c/fields/HubBore__c.field-meta.xml
<CustomField>
    <fullName>HubBore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hub Bore</label>
    <referenceTo>WheelHubBore__c</referenceTo>
    <relationshipName>Drawings_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>