force-app/main/default/objects/DrawingVersion__c/fields/HubOffset__c.field-meta.xml
<CustomField>
    <fullName>HubOffset__c</fullName>
    <label>Hub Offset</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>