force-app/main/default/objects/DrawingVersion__c/fields/Imbalance__c.field-meta.xml
<CustomField>
    <fullName>Imbalance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imbalance</label>
    <referenceTo>Wheel_Imbalance__c</referenceTo>
    <relationshipName>Drawings_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>