force-app/main/default/objects/DrawingVersion__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>