force-app/main/default/objects/DrawingVersion__c/fields/NameOrderItem__c.field-meta.xml
<CustomField>
    <fullName>NameOrderItem__c</fullName>
    <formula>DrawingBase__r.Product__r.Name+ &apos; &apos; +  AxLoadType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name for OrderItem</label>
    <type>Text</type>
</CustomField>