force-app/main/default/objects/DrawingVersion__c/fields/PlugType__c.field-meta.xml
<CustomField>
    <fullName>PlugType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plug Type</label>
    <referenceTo>WheelPlugType__c</referenceTo>
    <relationshipName>Drawings_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>