force-app/main/default/objects/DrawingVersion__c/fields/ProdDetails__c.field-meta.xml
<CustomField>
    <fullName>ProdDetails__c</fullName>
    <formula>WheelProduct__c+&apos; &apos;+CASE(WheelProduct__c,
&apos;Wheels&apos;, Diameter__r.D_mm__c+&apos;x&apos;+Hub__r.HubSize__c+&apos;, &apos;+SteelGrade__r.Name+&apos;, &apos;+AxLoadType__r.Name+&apos;, acc. to &apos;+Name,
&apos;Wheelsets&apos;, Diameter__r.D_mm__c+&apos;x&apos;+Hub__r.HubSize__c+&apos; &apos;+ AxLoadType__r.Name + &apos; &apos; + &apos; &apos; + AxleBox__r.Name, 
&apos;Axles&apos;, Diameter__r.D_mm__c + &apos; &apos;+SteelGrade__r.Name+&apos; &apos;+ AxLoadType__r.Name+&apos;, acc. to &apos;+Name,
Diameter__r.D_mm__c+&apos;x&apos;+Hub__r.HubSize__c+&apos;, &apos;+SteelGrade__r.Name+ Standard__r.Name +&apos;, acc. to &apos;+Name
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Details</label>
    <type>Text</type>
</CustomField>