force-app/main/default/objects/DrawingVersion__c/fields/ProdType__c.field-meta.xml
<CustomField>
    <fullName>ProdType__c</fullName>
    <formula>DrawingBase__r.Product__r.ID_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod Type</label>
    <type>Text</type>
</CustomField>