force-app/main/default/objects/DrawingVersion__c/fields/WeightKG__c.field-meta.xml
<CustomField>
    <fullName>WeightKG__c</fullName>
    <label>Weight (kg)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>