force-app/main/default/objects/DrawingVersion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ID__c</columns>
    <columns>BaseID__c</columns>
    <columns>Facet__c</columns>
    <columns>Version__c</columns>
    <columns>NAME</columns>
    <columns>AxLoad_t__c</columns>
    <columns>AxLoadType__c</columns>
    <columns>WheelProduct__c</columns>
    <columns>ProdType__c</columns>
    <columns>AxleBox__c</columns>
    <columns>DrawingAxle__c</columns>
    <columns>DrawingWheel__c</columns>
    <columns>DrawingBase__c</columns>
    <columns>ProdDetails__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>